# evolve-flows

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
evolve_flows/: __init__.py
evolve_flows/evolver/: __init__.py  bridge.py  node.py  types.py
evolve_flows/tests/: conftest.py
evolve_flows/tests/integration/: test_evolver_integration.py
evolve_flows/tests/unit/: test_bridge.py  test_node.py  test_types.py
examples/alphaevolve-champsim-simple/: champsim_evaluator.py  cluster.yaml  config_adaevolve.yaml  config_alphaevolve.yaml  result_mapper.py  run_flow.py
